# TGEngine

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConsoleApplication1.sln  ISSUE_TEMPLATE.md  LICENSE  README.md  TEngine.sln  TGEngine.sln  compile_shader.bat  dependencies.ps1  docs.bat  docs.py  install.bat  setup.bat  setup.py  tge.cap
TGEngine/: Annotations.h  Annotations.hpp  App.hpp  Application.cpp  Application.h  BaseDrawLib.cpp  BaseDrawLib.hpp  Beziercurve.cpp  CMakeLists.txt  CMakeSettings.json  Circle.cpp  Circle.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Console.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Debug.cpp  Debug.h  Debug.hpp  Descriptors.hpp  Device.cpp  Device.h  Device.hpp  Dll.hpp  Draw.cpp  Draw.hpp  DrawLib.hpp  Editor.cpp  Editor.hpp  Ellipse.cpp  Ellipse.hpp  Endian.cpp  Endian.hpp  Error.h  Error.hpp  FBX_Loader.cpp  FBX_Loader.hpp  Files.cpp  Files.h  (+97 more)
TGEngine/Drawlib/: BaseDrawLib.cpp  BaseDrawLib.hpp  Beziercurve.cpp  Beziercurve.hpp  Circle.cpp  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Rectangle.cpp  Rectangle.hpp
TGEngine/GameContent/: Camera.cpp  Camera.hpp
TGEngine/IO/: Deflate.cpp  Deflate.hpp  Files.cpp  Files.hpp  ImagePNG.cpp  ImagePNG.hpp  LoadFont.cpp  LoadFont.hpp  Mouse.cpp  Mouse.hpp  ObjLoader.cpp  ObjLoader.hpp  Properties.hpp
TGEngine/Pipeline/: CommandBuffer.cpp  CommandBuffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Draw.cpp  Draw.hpp  Framebuffer.cpp  Instance.cpp  Instance.hpp  Pipe.cpp  Pipe.hpp  Pipeline.hpp  PrePipeline.cpp  PrePipeline.hpp  RenderPass.hpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp
TGEngine/Pipeline/Buffer/: Memory.cpp  Memory.hpp  Texturebuffer.cpp  Texturebuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
TGEngine/Pipeline/Window/: Win32Window.cpp  Win32Window.hpp  Window.cpp  Window.hpp
TGEngine/Ressources/: ShaderBuildscript.py  ShaderData.cpp  camera.glsl  camera.spv  frag.spv  fragmentshader.glsl  fragmentshader.spv  text.mtl  vert.spv  vertexshader.glsl  vertexshader.spv
TGEngine/Util/: Annotations.hpp  Debug.hpp  Math.hpp  Vertex.hpp
TGEngine/drawlib/: BaseDrawLib.hpp  Beziercurve.cpp  Beziercurve.hpp  Circle.cpp  Circle.hpp  DrawLib.hpp  Ellipse.cpp  Ellipse.hpp  Quad.hpp  Rectangle.cpp  Rectangle.hpp
TGEngine/enc_temp_folder/20af0d97d23885cf59bd72e53a29e3/: UI.cpp
TGEngine/game_content/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  StaticCamera.cpp  StaticCamera.hpp
TGEngine/gamecontent/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PlayerController.cpp  PlayerController.hpp  StaticCamera.cpp  StaticCamera.hpp  UIMaterial.cpp  UIMaterial.hpp
TGEngine/gamecontent/camera/: 2DCamera.cpp  2DCamera.hpp  Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  StaticCamera.cpp  StaticCamera.hpp
TGEngine/io/: Deflate.hpp  Files.cpp  Files.hpp  Font.cpp  Font.hpp  FontTables.cpp  FontTables.hpp  ImagePNG.cpp  ImagePNG.hpp  Keyboard.cpp  Keyboard.hpp  LoadFont.cpp  LoadFont.hpp  Mouse.cpp  Mouse.hpp  Properties.cpp  Properties.hpp  Resource.cpp  Resource.hpp
TGEngine/io_/: Deflate.cpp  Keyboard.cpp  Mouse.cpp
TGEngine/model/: FBX_Loader.cpp  FBX_Loader.hpp  GLTFLoader.cpp  GLTFLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
TGEngine/pipeline/: CommandBuffer.cpp  CommandBuffer.hpp  DepthStencil.cpp  DepthStencil.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Draw.cpp  Draw.hpp  Framebuffer.cpp  Framebuffer.hpp  Instance.cpp  Instance.hpp  Pipe.cpp  Pipe.hpp  Pipeline.hpp  PrePipeline.cpp  PrePipeline.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  ShaderCreation.cpp  ShaderCreation.hpp  Swapchain.cpp  Swapchain.hpp
TGEngine/pipeline/Buffer/: VertexBuffer.cpp
TGEngine/pipeline/Window/: Window.cpp
TGEngine/pipeline/buffer/: IndexBuffer.cpp  IndexBuffer.hpp  Memory.cpp  Memory.hpp  StagingBuffer.cpp  (+7 more)
TGEngine/pipeline_/: Descriptors.cpp  Framebuffer.hpp  Instance.hpp
TGEngine/private/: Error.cpp  Stdbase.cpp  TGEngine.cpp  Util.cpp
TGEngine/public/: Error.hpp  Module.hpp  Stdbase.hpp  TGEngine.hpp  Util.hpp
TGEngine/renderTest/: TGRenderTest.cpp
TGEngine/resources/: ColorBasicPipe.json  ColorOnlyNormalPipe.json  FragmentColorOnly.glsl  FragmentColorOnly.spv  FragmentTextured.glsl  FragmentTextured.spv  FragmentTextured2D.glsl  FragmentTextured2D.spv  FragmentTopDown.glsl  FragmentUIColor.glsl  FragmentUIColor.spv  FragmentUITextured.glsl  FragmentUITextured.spv  Fragmentshader.glsl  Fragmentshader.spv  Layers.txt  Resources.tgr  Shader Compiler.bat  ShaderBuildscript.py  ShaderData.cpp  ShaderData.hpp  ShaderPipes.cpp  ShaderPipes.hpp  Tex2DPipe.json  TexturedBasicPipe.json  TopDownInstancedPipe.json  TopDownPipe.json  UIColorPipe.json  UITexturedPipe.json  VertexColorOnly.glsl  VertexColorOnly.spv  VertexTextured.glsl  VertexTextured.spv  VertexTopDown.glsl  VertexTopDownInstanced.glsl  VertexUI.glsl  VertexUI.spv  Vertexshader.glsl  Vertexshader.spv  fragmentshader.glsl
TGEngine/test/: TGTest.cpp  compile.bat  test.frag  test.vert
TGEngine/ui/: UI.cpp  UI.h  UI.hpp  UIButton.cpp  UIButton.h  UIButton.hpp  UIDrawable.cpp  UIDrawable.hpp  UIEntity.cpp  UIEntity.hpp  UISystem.cpp  UISystem.hpp  UITextComponent.cpp  UITextComponent.hpp  UITexture.cpp  UITexture.hpp  UITextureComponent.cpp  UITextureComponent.hpp  UIUpdatable.cpp  UIUpdatable.hpp
TGEngine/util/: Annotations.hpp  Debug.cpp  Debug.hpp  Endian.hpp  Math.cpp  Math.hpp  TGString.hpp  TGVertex.cpp  TGVertex.hpp  VectorUtil.cpp  VectorUtil.hpp  tgstring.hpp
TGEngine/util_/: Math.hpp
TGEngine/vlib/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDescriptor.cpp  VulkanDescriptor.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp
(+291 files in other folders)
